@@ -26,6 +26,13 @@ enum class ENeuronSkeletonEnum : uint8
 	VE_Mannequin	UMETA(DisplayName = "Mannequin")	// Mannequin, New grey Unreal default skeleton with A-Pose
 };
 
+UENUM(BlueprintType)
+enum class ENeuronMotionLineFormatEnum : uint8
+{
+	VE_Standard		UMETA(DisplayName = "Standard"),	// BVH Standard format (only the float numbers and a CR or LF at line ending)
+	VE_Neuron 		UMETA(DisplayName = "Neuron")		// Axis Neuron BVH format (with character name at beginning and || at line ending)
+};
+
 /**
  * 
  */
@@ -38,7 +45,7 @@ public:
 	UFUNCTION(BlueprintCallable, Category = "Perception Neuron", meta = (DisplayName = "Init Neuron", Keywords = "Init and read BVH reference skeleton"))
 		static bool NeuronInit(AThirdPersonNeuronController *Controller, const FString BVHFileName = FString(TEXT("axis.bvh")));
 	UFUNCTION(BlueprintCallable, Category = "Perception Neuron", meta = (DisplayName = "Connect Neuron", Keywords = "Connect to Axis Neuron"))
-		static bool NeuronConnect(AThirdPersonNeuronController *Controller, const FString HostName = FString(TEXT("127.0.0.1")), int32 Port = 7001, bool bReference = false, bool bDisplacement = true);
+		static bool NeuronConnect(AThirdPersonNeuronController *Controller, const FString HostName = FString(TEXT("127.0.0.1")), int32 Port = 7001, bool bReference = false, bool bDisplacement = true, ENeuronMotionLineFormatEnum MotionLineFormat = ENeuronMotionLineFormatEnum::VE_Neuron);
 	UFUNCTION(BlueprintCallable, Category = "Perception Neuron", meta = (DisplayName = "Disconnect Neuron", Keywords = "Disconnect from Axis Neuron"))
 		static bool NeuronDisconnect(AThirdPersonNeuronController *Controller);
 	UFUNCTION(BlueprintCallable, Category = "Perception Neuron", meta = (DisplayName = "Read Neuron Motion", Keywords = "Read motion data from Axis Neuron"))
